[package]
name = "virtual_machine"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "default_benchmark"
harness = false

[profile.dev]
opt-level = 0          # No optimizations for faster compilation
debug = true           # Include debug symbols
debug-assertions = true # Enable runtime checks
